docs: Update my e-mail address and website
I’ve changed jobs since a while ago.

Signed-off-by: Philip Withnall <pwithnall@endlessos.org>

--- a/README
+++ b/README
@@ -101,5 +101,5 @@ https://gitlab.com/dbus-deviation/dbus-deviation
 Contact
 =======
 
-Philip Withnall <philip.withnall@collabora.co.uk>
-http://people.collabora.com/~pwith/dbus-deviation/
+Philip Withnall <philip@tecnocode.co.uk>
+https://tecnocode.co.uk/dbus-deviation/
