--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Overview of changes from dbus-deviation 0.6.0 to dbus-deviation 0.6.1
+=====================================================================
+
+Major changes:
+ - Drop support for Python 2.7
+ - Move to pycodestyle from pep8 and drop setup.py requirement for it
+ - Minor maintenance documentation updates
+
 Overview of changes from dbus-deviation 0.5.0 to dbus-deviation 0.6.0
 =====================================================================
 
