docs: Port README to Markdown
Make it slightly more modern, and rendered by GitHub and GitLab
automatically.

Signed-off-by: Philip Withnall <pwithnall@endlessos.org>

--- a/NEWS
+++ b/NEWS
@@ -2,46 +2,46 @@ Overview of changes from dbus-deviation 0.5.0 to dbus-deviation 0.6.0
 =====================================================================
 
 Major changes:
- • Split out the logging API to allow for reuse
- • Expose source line numbers in dbusapi.ast
- • Add a D-Bus type parser, dbusapi.typeparser (thanks to Kaloyan Tenchov)
- • Drop Python 3.3 support as Sphinx no longer supports it
- • Add a D-Bus type formatter, dbusapi.typeformatter
+ - Split out the logging API to allow for reuse
+ - Expose source line numbers in dbusapi.ast
+ - Add a D-Bus type parser, dbusapi.typeparser (thanks to Kaloyan Tenchov)
+ - Drop Python 3.3 support as Sphinx no longer supports it
+ - Add a D-Bus type formatter, dbusapi.typeformatter
 
 Overview of changes from dbus-deviation 0.4.0 to dbus-deviation 0.5.0
 =====================================================================
 
 Major changes:
- • Add support for <node> elements (Kaloyan Tenchov)
- • Add object path, interface name and callable name validation
+ - Add support for <node> elements (Kaloyan Tenchov)
+ - Add object path, interface name and callable name validation
    (Kaloyan Tenchov)
- • Relicense to LGPLv2.1+
+ - Relicense to LGPLv2.1+
 
 Overview of changes from dbus-deviation 0.3.0 to dbus-deviation 0.4.0
 =====================================================================
 
 Major changes:
- • Improve test coverage
- • Port to lxml instead of xml.etree
- • Support parsing comments and documentation nodes
+ - Improve test coverage
+ - Port to lxml instead of xml.etree
+ - Support parsing comments and documentation nodes
 
 Overview of changes from dbus-deviation 0.2.0 to dbus-deviation 0.3.0
 =====================================================================
 
 Major changes:
- • Improve utility arguments and variables in dbus-deviation.mk and vcs-helper
+ - Improve utility arguments and variables in dbus-deviation.mk and vcs-helper
 
 Overview of changes from dbus-deviation 0.1.0 to dbus-deviation 0.2.0
 =====================================================================
 
 Major changes:
- • Improve error reporting
- • Improve test coverage
- • Add Makefile snippet and helper program (vcs-helper) for use in other
+ - Improve error reporting
+ - Improve test coverage
+ - Add Makefile snippet and helper program (vcs-helper) for use in other
    projects
 
 Initial release of dbus-deviation 0.1.0
 =======================================
 
 Major changes:
- • Initial version of the project
+ - Initial version of the project
